# SO

./: CMakeLists.txt  all_timestamps.csv  main.c  pipes.c  pipes.h  pipes_2_.c  pipes_2_.h  process.c  process.h
Parte 1/: pipes.c  pipes.h  pipes_2_.c  pipes_2_.h  process.c  process.h
Parte 2/: Produtor_Consumidor.c  Produtor_Consumidor.h  Produtor_Consumidor_2_.c  Produtor_Consumidor_2_.h  threads.c  threads.h
